# bevy_mancala

./: Cargo.toml  LICENSE  README.md  bevy_mancala.d.ts  bevy_mancala.js  bevy_mancala_bg.wasm.d.ts  index.html
.cargo/: config.toml
.github/workflows/: rust.yml
assets/shaders/: outline.wgsl
src/: game.rs  main.rs  menu.rs  profile.rs  states.rs  ui.rs
src/game/: ai.rs  animation.rs  board.rs  game_over.rs  helpers.rs  label.rs  marble.rs  mod.rs  player.rs  turn_indicator.rs
src/menu/: mod.rs
src/ui/: animation.rs  animations.rs  assets.rs  board.rs  constants.rs  game_over.rs  helpers.rs  label.rs  labels.rs  marble.rs  marbles.rs  mod.rs  player.rs  slots.rs
