[package]
name = "bevy_mancala"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.12.0" }
bevy-persistent = { version = "0.4.3", features = ["all"] }
dirs = "5.0.1"
rand = "0.8.5"
serde = "1.0.196"
ahash = "0.8.7"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1